# College

./: LICENSE  README.md
C#/MineSweeper/: MineSweeper.sln
C#/MineSweeper/MineSweeper/: 005hk0ue.tmp_proj  App.xaml  App.xaml.cs  EasyWindow.xaml  EasyWindow.xaml.cs  HardWindow.xaml  HardWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MediumWindow.xaml  MediumWindow.xaml.cs  MineSweeper.csproj  MineSweeperLogic.cs  MyFile.cs  MyGraphics.cs  TimeThread.cs
C#/Projekat/: Projekat.sln
C#/Projekat/Projekat/: Program.cs  Projekat.csproj
C_C++/: uno(matf).c
C_C++/Diplomski/: CMakeLists.txt
C_C++/Diplomski/src/: main.cpp
C_C++/Diplomski/src/classes/: BurstTime.cpp  FirstComeFirstServed.cpp  Priority.cpp  ScheduleProcess.cpp  SetPriority.cpp  ShortestJobFirst.cpp
C_C++/Diplomski/src/header_files/: BurstTime.h  FirstComeFirstServed.h  Priority.h  ScheduleProcess.h  SetPriority.h  ShortestJobFirst.h
C_C++/Liste(LIFO)/: CMakeLists.txt  main.c
C_C++/OP1/Vezba10/: CMakeLists.txt  Knjiga.cpp  Knjiga.h  Polica.cpp  Polica.h  main.cpp
C_C++/OP1/Vezba11/: CMakeLists.txt  Kompleks.cpp  Kompleks.h  NizKompleksnih.cpp  NizKompleksnih.h  main.cpp
C_C++/OP1/Vezba5/: Avion.cpp  Avion.h  CMakeLists.txt  Karta.cpp  Karta.h  main.cpp
C_C++/OP1/Vezba6/: CMakeLists.txt  KutijaPeza.cpp  KutijaPeza.h  Pez.cpp  Pez.h  main.cpp
C_C++/OP1/Vezba7/: Vezba 7a
C_C++/OP1/Vezba8/: CMakeLists.txt  Knjiga.cpp  Knjiga.h  List.cpp  List.h  main.cpp
C_C++/euroleague(etf)/: CMakeLists.txt  main.c
Java/Depth-first Search/src/: Cvor.java  (+3 more)
Java/Projekat/: rt4615_dejan_zdravkovc.sql
(+86 files in other folders)
